--- a/src/components/common/header/header.module.css
+++ b/src/components/common/header/header.module.css
@@ -19,6 +19,7 @@
   width: 9rem;
   display: flex;
   justify-content: center;
+  gap: 1.5rem;
   align-items: center;
   border-radius: 50%;
   cursor: pointer;
